tutorial/manifests/nfs/nfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-webserver
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nfs-webserver
